--- a/app/locale/es/LC_MESSAGES/django.po
+++ b/app/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-12-21 21:32+0100\n"
+"POT-Creation-Date: 2019-12-22 18:18+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -131,6 +131,10 @@ msgstr "Último post"
 #: .\app\templates\forum\newpost.html:8
 msgid "New post for thread"
 msgstr "Nuevo post para el hilo "
+
+#: .\app\templates\forum\newpost.html:11
+msgid "Type your message here"
+msgstr "Escribe tu mensaje aquí"
 
 #: .\app\templates\forum\newpost.html:18
 msgid "Preview"
